--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 	</dependencies>
 
 	<build>
+		<defaultGoal>clean package</defaultGoal>
 		<sourceDirectory>src</sourceDirectory>
 
 		<resources>
